--- a/template.html
+++ b/template.html
@@ -32,7 +32,7 @@
           <div class="Secondary__title">
             
             <h3 class="phone"><span class="icon">    <i class="fas fa-phone"></i></span>
-           </i>1(888) 123-4567</h3> <span class="sub-text"> <h5 class="sub-text">call us at</h5></span>
+           </i>1(888) 123-4567</h3> <span class="secondary-text"> <h5 class="sub-text">call us at</h5></span>
            
           </div>
         </div>
