--- a/template.html
+++ b/template.html
@@ -181,24 +181,23 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images\m_1840463.jpg" class="d-block w-100" alt="...">
+            <img class="carousel-image" src="images\m_1840463.jpg" " class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <h5>Banking from the comforts of your home</h5>
+          
             </div>
           </div>
-          <div class="carousel-items">
-            <img src="images\Two_Friends_Talking_and_Having_Fun.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-item">
+            <img class="carousel-image" src="images\Two_Friends_Talking_and_Having_Fun.jpg" " class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <h5>Friendly staff to listen to your goals and concerns</h5>
             </div>
-          </div>
+            </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img class="carousel-image" src="images\Dollars_with_jumping_arrow.jpg" " class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h5>Grow your money with confidence</h5>
+            
             </div>
           </div>
         </div>
