--- a/template.html
+++ b/template.html
@@ -177,7 +177,23 @@
 
           <div class="row">
             <div class="col-12">
-              <img src="" alt="" class="pawprint">
+              <img src="images\pringlesPaw.png"  alt="" class="pawprint mx-auto mt-3 d-block">
+              <form>
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label">Email address</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                </div>
+                <div class="mb-3">
+                  <label for="exampleInputPassword1" class="form-label">Password</label>
+                  <input type="password" class="form-control" id="exampleInputPassword1">
+                </div>
+                <div class="mb-3 form-check">
+                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                  <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                </div>
+                <button type="submit" class="btn btn-primary d-block ms-auto mb-3 me-1">Submit</button>
+              </form>
             </div>
           </div>
 
@@ -190,14 +206,14 @@
     
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="carousel-image" src="images\m_1840463.jpg" " class="d-block w-100" alt="...">
+            <img class="carousel-image d-lg-block" src="images\m_1840463.jpg" "  alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Banking from the comforts of your home</h5>
           
             </div>
           </div>
             <div class="carousel-item">
-            <img class="carousel-image" src="images\Two_Friends_Talking_and_Having_Fun.jpg" " class="d-block w-100" alt="...">
+            <img class="carousel-image" src="images\Two_Friends_Talking_and_Having_Fun.jpg" " alt="...">
             <div class="carousel-caption d-none d-md-block">
             <h5>Friendly staff to listen to your goals and concerns</h5>
             </div>
