--- a/template.html
+++ b/template.html
@@ -208,14 +208,14 @@
           <div class="carousel-item active">
             <img class="carousel-image  d-md-flex" src="images\healthRetireEducation.png" "  alt="...">
             <div class="carousel-caption caption-change-1 d-none d-md-block">
-              <h5>A new way to save</h5>
+              <h5> A new way to save</h5>
           
             </div>
           </div>
             <div class="carousel-item ">
             <img class="carousel-image  " src="images\Piggy_Bank_on_the_Clouds_-_Savings_Concept.jpg" " alt="...">
             <div class="carousel-caption caption-change-2 d-md-block">
-            <h5>Friendly staff to listen to your goals and concerns</h5>
+            <h5>Intrest higher than the clouds</h5>
             </div>
             </div>
           <div class="carousel-item">
@@ -245,6 +245,22 @@
     </div>
 
     </div>
+
+    <footer class="text-center text-white fixed-bottom" style="background-color: #21081a;">
+      <!-- Grid container -->
+      <div class="container p-4">
+         Locations | Contact Us | Help | Accessible Banking | Careers | Privacy | Security | Feedback |
+      </div>
+      <!-- Grid container -->
+    
+      <!-- Copyright -->
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2020 Copyright:
+        <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      </div>
+      <!-- Copyright -->
+    </footer>
+
   </div>
 
 
