added section 1 working on consistant carousel size

--- a/template.html
+++ b/template.html
@@ -202,9 +202,9 @@
 
       </div>
       <div class="col-8">
-      <div id="carouselExampleCaptions" class="carousel slide w-100" data-bs-ride="carousel">
+      <div id="carouselExampleCaptions" class="carousel" data-bs-ride="carousel">
     
-        <div class="carousel-inner d-block mx-auto ">
+        <div class="carousel-inner  " role="listbox" style="max-width: 900px; max-height:600px !important;">
           <div class="carousel-item active">
             <img class="carousel-image  d-md-flex" src="images\healthRetireEducation.png" "  alt="...">
             <div class="carousel-caption caption-change-1 d-none d-md-block">
@@ -246,7 +246,22 @@
 
     </div>
 
-    <footer class="text-center text-white fixed-bottom" style="background-color: #21081a;">
+    <section class="main row">
+      <div class="col-4">
+        <img src="images\Two_Friends_Talking_and_Having_Fun.jpg" alt="" class="section_image">
+      </div>
+
+      <div class="col-8">
+        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia cupiditate fugit saepe accusantium vero veniam cumque quo sed, consectetur natus non neque fugiat? Consequuntur, corporis explicabo reprehenderit a quibusdam aperiam.</p>
+        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem facere provident omnis unde, sit delectus libero et exercitationem, impedit iusto dolor dolorem fugit reprehenderit quisquam id autem, iure aliquid odio! Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur sit aliquam illo accusamus ratione est quae doloremque doloribus alias excepturi, distinctio reiciendis unde beatae suscipit at, eaque, labore corrupti consectetur!
+        </p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex quos voluptatum expedita optio magnam dolorem quae! Explicabo dignissimos quidem architecto quibusdam quod. Exercitationem numquam porro illum eveniet nihil mollitia minus.</p>
+      </div>
+
+
+    </section>
+
+    <footer class="text-center text-white" style="background-color: #21081a;">
       <!-- Grid container -->
       <div class="container p-4">
          Locations | Contact Us | Help | Accessible Banking | Careers | Privacy | Security | Feedback |
@@ -256,7 +271,7 @@
       <!-- Copyright -->
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
         © 2020 Copyright:
-        <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+        <a class="text-white" href="https://mdbootstrap.com/">Pringles Pocket Credit Union</a>
       </div>
       <!-- Copyright -->
     </footer>
