corrected carousel image align

--- a/template.html
+++ b/template.html
@@ -251,7 +251,7 @@
         <img src="images\Two_Friends_Talking_and_Having_Fun.jpg" alt="" class="section_image">
       </div>
 
-      <div class="col-8">
+      <div class="col-8 ipsum">
         <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia cupiditate fugit saepe accusantium vero veniam cumque quo sed, consectetur natus non neque fugiat? Consequuntur, corporis explicabo reprehenderit a quibusdam aperiam.</p>
         <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem facere provident omnis unde, sit delectus libero et exercitationem, impedit iusto dolor dolorem fugit reprehenderit quisquam id autem, iure aliquid odio! Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur sit aliquam illo accusamus ratione est quae doloremque doloribus alias excepturi, distinctio reiciendis unde beatae suscipit at, eaque, labore corrupti consectetur!
         </p>
