--- a/template.html
+++ b/template.html
@@ -27,7 +27,9 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light  ">
           <div class="container-fluid ">
             <a class="navbar-brand" href="#">Pringles Pocket Credit Union</a>
-            <button
+
+            <div class="headerSub">
+              <button
               class="navbar-toggler"
               type="button"
               data-bs-toggle="collapse"
@@ -165,6 +167,8 @@
                 </li>
               </ul>
             </div>
+            </div>
+            
           </div>
         </nav>
       </div>
